Fix vertical gaps between divs

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ h1 {
 
 .container {
   max-width: 700px;
-  margin: 0 auto;
+  margin: 2rem auto;
   padding: 0 1rem;
   position: relative;
   display: flex;
@@ -102,7 +102,7 @@ h1 {
 
 .forecast {
   display: flex;
-  margin: 2rem auto;
+  margin: 4rem auto;
   justify-content: space-between;
 }
 
